unpackaged/main/default/objects/SBQQ__ContractedPrice__c/fields/SBQQ__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ExpirationDate__c</fullName>
    <description>Expiration date for this contracted price.</description>
    <inlineHelpText>Date d&#39;expiration de ce prix contracté.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>