unpackaged/main/default/objects/SBQQ__ContractedPrice__c/fields/SBQQ__FilterField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__FilterField__c</fullName>
    <description>Quote line field that&#39;s evaluated to determine if this contracted price applies.</description>
    <inlineHelpText>Sélectionnez un champ à utiliser dans un filtre, tel que Gamme de produits, si vous souhaitez appliquer ce prix à un ensemble de produits. Si vous utilisez un champ personnalisé, ajoutez le nom d&#39;API au champ de filtrage en tant que valeur de liste de sélection.</inlineHelpText>
    <label>Filter Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Product Code</fullName>
            </value>
            <value>
                <fullName>Product Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>