unpackaged/main/default/objects/SBQQ__ContractedPrice__c/fields/SBQQ__Price__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Price__c</fullName>
    <description>Actual price that was negotiated. This value will override any other price such as the one from a price book or a volume-discounted price.</description>
    <inlineHelpText>Saisissez le prix qui a été négocié avec le client. Cette valeur remplace les autres prix, notamment celui d&#39;un catalogue de prix ou d&#39;un prix avec une remise sur volume.</inlineHelpText>
    <label>Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>