unpackaged/main/default/objects/SBQQ__ContractedPrice__c/fields/SBQQ__Product__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product for which this price was negotiated.</description>
    <inlineHelpText>Sélectionnez un produit d&#39;un catalogue de prix que vous souhaitez appliquer à cette remise.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contracted Prices</relationshipLabel>
    <relationshipName>ContractedPrices</relationshipName>
    <type>Lookup</type>
</CustomField>